# posco-bot

./: README.md  posco_assembly.py
posco_env_description/: CMakeLists.txt  package.xml
posco_env_description/robots/: env_column.xacro  panda_arm.xacro  posco_env.urdf.xacro
posco_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
posco_moveit_config/config/: fake_controllers.yaml  gazebo_panda.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  stomp_planning.yaml
posco_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
